--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,9 @@
 {
+  "bracketSpacing": true,
+  "printWidth": 80,
+  "singleQuote": true,
   "trailingComma": "none",
   "tabWidth": 2,
-  "semi": false,
-  "singleQuote": true,
-  "endOfLine":"auto"
+  "useTabs": false,
+  "react/jsx-max-props-per-line": [1, { "when": "always" }]
 }
